--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Signup Page</title>
-<link rel="stylesheet" href="/css/signup.css">
+<link rel="stylesheet" href="css/signup.css">
 <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-database.js"></script>
