--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div>
     <h2>Chat</h2>
     <div id="chat-window" style="background-color: lightgray;"></div>
-    <textarea type="text" id="message-input" placeholder="Type your message"></textarea>
+    <input type="text" id="message-input" placeholder="Type your message"></textarea>
     <button id="send-button">Send</button>
   </div>
 
